--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "SmokerMusicX",
+  "name": "SFL MUSIC ",
   "description": "Open-Source bot to play songs in your Telegram's Group Voice Chat. Powered by PyTgCalls.",
   "keywords": ["music", "voicechat", "telegram"],
-  "repository": "https://github.com/EsportMusicX/SmokerMusicX",
+  "repository": "https://github.com/sakshi444a/SmokerMusicX",
   "stack": "container",
   "env": {
     "SESSION_NAME": {
