--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "SFL MUSIC ",
+  "name": "SFL MUSIC BOT 🎶 ",
   "description": "Open-Source bot to play songs in your Telegram's Group Voice Chat. Powered by PyTgCalls.",
   "keywords": ["music", "voicechat", "telegram"],
   "repository": "https://github.com/sakshi444a/SmokerMusicX",
